# TT-qt-server-client

./: README.md
client/: CMakeLists.txt  DeviceClient.cpp  DeviceClient.h  main.cpp
server/: CMakeLists.txt  CMakeLists.txt.EyoqpE  ClientConnection.cpp  ClientConnection.h  MainWindow.cpp  MainWindow.h  MessageFraming.h  ServerManager.cpp  ServerManager.h
